# TrentNodes

./: README.md  __init__.py  add_colors.sh  pyproject.toml  requirements.txt
example_workflows/: example-keyframe-node.json
js/: frame_ramp_boogie.js  grid_paste.js  image_caption_layout.js  image_text_grid.js  point_picker.js  string_list_cowboy.js  trent_appearance.js  wan_vace_keyframes.js
nodes/: Custom_Utility_Nodes.py  JSONSummary.py  LatestVideoFinalFrameFromDirNode.py  LatestVideoFinalFramefromDirNode..py  align_stylized_frame.py  chop_cuts.py  comfy_bevel_emboss.py  comfyui_filename_node.py  comfyui_image_analyzer.py  crossdissolveoverlap.py  enhanced_video_cutter.py  filename_extractor.py  first_valid.py  frame_ramp_boogie.py  image_caption_layout.py  image_text_grid.py  improved_animation_processor.py  json_extractor.py  latent_aligned_mask_node.py  latest_video_last_frames_node.py  lora_test_prompt_generator.py  multi_batch_combine.py  smart_file_transfer.py  string_cowboy.py  this_that_or_the_other.py  ultimate_scene_detect.py  video_folderanalyzer_node.py  wanmagic.py
nodes/lipsync/: __init__.py  audio_to_phonemes.py  creature_lipsync.py  mouth_shape_compositor.py  phoneme_to_mouth_shapes.py  point_tracker.py  tracked_compositor.py
nodes/wan_vace/: wan_vace_keyframes.py
utils/: audio_utils.py  banner.py  birefnet_wrapper.py  discovery.py  easing.py  face_alignment.py  image_ops.py  inpainting.py  mask_ops.py  model_cache.py  phoneme_utils.py  pose_alignment.py  segmentation.py  validation.py
workflows/: lipsync_tracked_workflow.json
